JEAP-7465: Add strict audience validation options and default the introspection client id to the resource id.