@@ -27,25 +27,31 @@ public class ResourceServerPropertiesTest {
 
         assertThat(resourceServerProperties.getResourceId()).isEqualTo("test-resource");
         assertThat(resourceServerProperties.getApplicationName()).isEqualTo("test-app");
-        assertThat(resourceServerProperties.getAudience()).isEqualTo("test-resource");
+        assertThat(resourceServerProperties.getStrictAudienceValidation()).isEqualTo(StrictAudienceValidationMode.ON);
 
         assertThat(authServer.getIssuer()).isEqualTo("http://keycloak/auth/realm");
         assertThat(authServer.getJwkSetUri()).isEqualTo("http://keycloak/auth/realm/protocol/openid-connect/certs");
         assertThat(authServer.getClaimSetConverterName()).isNull();
         assertThat(authServer.getAuthenticationContexts()).containsOnly(SYS, USER);
+        assertThat(authServer.getJwksConnectTimeoutInMillis()).isEqualTo(3000);
+        assertThat(authServer.getJwksReadTimeoutInMillis()).isEqualTo(4000);
 
         assertThat(b2bGateway.getIssuer()).isEqualTo("http://b2b/auth");
         assertThat(b2bGateway.getJwkSetUri()).isEqualTo("http://b2b/.well-known/jwks.json");
         assertThat(b2bGateway.getClaimSetConverterName()).isEqualTo("test-b2b-converter");
         assertThat(b2bGateway.getAuthenticationContexts()).containsOnly(B2B);
+        assertThat(b2bGateway.getJwksConnectTimeoutInMillis()).isEqualTo(1000);
+        assertThat(b2bGateway.getJwksReadTimeoutInMillis()).isEqualTo(2000);
 
-        assertThat(authServers.size()).isEqualTo(3);
+        assertThat(authServers).hasSize(3);
 
-        AuthorizationServerConfigProperties keykloak2 = authServers.get(0);
+        AuthorizationServerConfigProperties keykloak2 = authServers.getFirst();
         assertThat(keykloak2.getIssuer()).isEqualTo("http://keycloak2/auth/realm");
         assertThat(keykloak2.getJwkSetUri()).isEqualTo("http://keycloak2/auth/realm/protocol/openid-connect/certs");
         assertThat(keykloak2.getClaimSetConverterName()).isEqualTo("test-keycloak2-converter");
         assertThat(keykloak2.getAuthenticationContexts()).containsOnly(SYS, USER);
+        assertThat(keykloak2.getJwksConnectTimeoutInMillis()).isEqualTo(15000); // default
+        assertThat(keykloak2.getJwksReadTimeoutInMillis()).isEqualTo(15000); // default
 
         AuthorizationServerConfigProperties keykloak3 = authServers.get(1);
         assertThat(keykloak3.getIssuer()).isEqualTo("http://keycloak3/auth/realm");
@@ -62,10 +68,27 @@ public class ResourceServerPropertiesTest {
         var allAuthServerConfigurations = resourceServerProperties.getAllAuthServerConfigurations();
         assertThat(allAuthServerConfigurations).hasSize(5);
         assertThat(allAuthServerConfigurations.get(0)).isEqualTo(authServer);
-        assertThat(allAuthServerConfigurations.get(1)).isEqualTo(b2bGateway.asAuthorizationServerConfigProperties());
+        // the B2B gateway configuration is converted to an auth server configuration, all values must be carried over
+        AuthorizationServerConfigProperties b2bGatewayAsAuthServer = allAuthServerConfigurations.get(1);
+        assertThat(b2bGatewayAsAuthServer.getIssuer()).isEqualTo("http://b2b/auth");
+        assertThat(b2bGatewayAsAuthServer.getJwkSetUri()).isEqualTo("http://b2b/.well-known/jwks.json");
+        assertThat(b2bGatewayAsAuthServer.getClaimSetConverterName()).isEqualTo("test-b2b-converter");
+        assertThat(b2bGatewayAsAuthServer.getAuthenticationContexts()).containsOnly(B2B);
+        assertThat(b2bGatewayAsAuthServer.getJwksConnectTimeoutInMillis()).isEqualTo(1000);
+        assertThat(b2bGatewayAsAuthServer.getJwksReadTimeoutInMillis()).isEqualTo(2000);
         assertThat(allAuthServerConfigurations.get(2)).isEqualTo(keykloak2);
         assertThat(allAuthServerConfigurations.get(3)).isEqualTo(keykloak3);
         assertThat(allAuthServerConfigurations.get(4)).isEqualTo(b2bGateway2);
+    }
+
+    @Test
+    void testResourceIdDefaultsToApplicationNameWhenNotSetExplicitly() {
+        ResourceServerProperties properties = new ResourceServerProperties();
+        properties.setApplicationName("test-app");
+
+        properties.initialize();
+
+        assertThat(properties.getResourceId()).isEqualTo("test-app");
     }
 
 }
